--- a/project.html
+++ b/project.html
@@ -33,19 +33,14 @@
                   <div class="cards">      
                       
                 </div>
+                <div class="oneItem"></div>
        
-
-
 
 
 
                <div class="footer">
                 <p>©2021  Novels Online</p>
                  </div>
-
-
-
-
 
 
 
