--- a/project.html
+++ b/project.html
@@ -26,7 +26,7 @@
                 <li><a href="">Top Novels</a></li>
                 <li><a href="">About </a></li>
                 <li> <a href="">Contact us</a>
-                 <li> <a href=""  class="right">Login</a>
+                 <li> <a href="http://127.0.0.1:5500/login.html"  class="right">Login</a>
                 </li>
             </ul>
        
@@ -35,9 +35,7 @@
                 </div>
                 <div class="oneItem"></div>
        
-
-
-
+<div class="parts"> </div>
                <div class="footer">
                 <p>©2021  Novels Online</p>
                  </div>
