--- a/project.html
+++ b/project.html
@@ -23,10 +23,10 @@
     
             <ul class="nav">
                 <li class="active"><a href="">Home</a> </li>
-                <li><a href="">Top Novels</a></li>
-                <li><a href="">About </a></li>
-                <li> <a href="">Contact us</a>
-                 <li> <a href="http://127.0.0.1:5500/login.html"  class="right">Login</a>
+                <li><a href="http://127.0.0.1:5500/newnovels.html">New Novels</a></li>
+                <li><a href="http://127.0.0.1:5500/about.html">About </a></li>
+                <li> <a href="http://127.0.0.1:5500/contact.html">Contact us</a>
+
                 </li>
             </ul>
 
