--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
 
         </li>
     </ul>
-
+         
     <p class="para">Novels is the site for readers novels recommendations. 
         <br>
         Our mission is to help people find novels they love. 
@@ -26,6 +26,9 @@
         The website launched in October 2021.</p>
 
 
+        <div class="footer">
+            <p>2021© Novels Online</p>
+             </div>
 
         <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
         <script src='project.js'></script>
